syntax = "proto3";
package services;
option go_package = ".;services";
import   "google/protobuf/timestamp.proto";
import "validate/validate.proto";

message ProdModel {// 商品模型
  int32 prod_id = 1;
  string prod_name = 2;
  float prod_price = 3;
}

message OrderMain{//主订单模型
  int32 order_id = 1;//订单ID，数字自增
  string order_no = 2; //订单号
  int32 user_id = 3; //购买者ID
  float order_money = 4 [(validate.rules).float.gt = 1];//商品金额
  google.protobuf.Timestamp order_time = 5; // 订单时间
  repeated OrderDetail order_detail = 6; // 嵌套子订单
}

message OrderDetail{// 子订单模型
  int32 detail_id = 1;
  string order_no = 2;
  int32 prod_id = 3;
  float prod_price = 4;
  int32 prod_num = 5;
}