syntax = "proto3";
package services;
option go_package = ".;services";
import "Models.proto";

message UserScoreRequest {
  repeated UserInfo users = 1;
}

message UserScoreResponse {
  repeated UserInfo users = 1;
}

service UserService {
  rpc GetUserScore(UserScoreRequest) returns (UserScoreResponse) {}
  rpc GetUserScoreByServerStream(UserScoreRequest) returns (stream UserScoreResponse) {} // 服务端流 分批处理和发送
  rpc GetUserScoreByClientStream(stream UserScoreRequest) returns (UserScoreResponse); // 客户端流
}